--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,9 +1,28 @@
 /* write your override styles here */
-#wall div {
-  display: none;
+#wall .tag-1 { 
+  display: none; 
 }
 
 #tag-2 {
   display: none;
 }
 
+#wall #tag-3.slick.wicked { 
+  display: none;
+}
+
+#wall .parent #tag-4 {
+  display: none; 
+}
+
+#wall div.parent #tag-5.slick {
+  display: none; 
+}
+
+:last-child div#tag-6 {
+  display: none; 
+}
+
+:first-child > div#tag-7.slick {
+  display: none;
+}
